--- a/css/portions/sections/section-1.scss
+++ b/css/portions/sections/section-1.scss
@@ -1,6 +1,14 @@
 .section-1{
   position: relative;
   top: 36%;
+  h1{
+    padding: 20% 0!important;
+    color: white;
+    span{
+      font-size: 20px!important;
+    }
+  }
+  
    
  
 }
