--- a/css/portions/sections/section-2.scss
+++ b/css/portions/sections/section-2.scss
@@ -69,8 +69,10 @@
     transition: 0.6s ease-out;
   }
   .section-2{
-    h2{ font-size: 100px!important;}
+ 
+    h2{ font-size: 100px!important; padding: 50px 0;}
     .glitch{
+      
       font-size: inherit;
     }
     h3{
