--- a/css/portions/sections/section-3.scss
+++ b/css/portions/sections/section-3.scss
@@ -1,4 +1,5 @@
 .section-3{
+    padding: 50px 0;
     .roadmap-section .container {
         position: relative;
         z-index: 30;
@@ -21,6 +22,7 @@
     }
     .text-section{
         padding: 100px 0;
+        text-align: center;
         .bloc{
             padding: 20px 0;
         }
