--- a/css/portions/styles.scss
+++ b/css/portions/styles.scss
@@ -15,6 +15,8 @@
 @import 'sections/section-1.scss';
 @import 'sections/section-2.scss';
 @import 'sections/section-3.scss';
+@import 'sections/footer.scss';
+@import 'sections/Menu.scss';
 @import 'sections/Mobile.scss';
 /*===========================*/
 
