--- a/css/portions/sections/Body.scss
+++ b/css/portions/sections/Body.scss
@@ -278,7 +278,11 @@ h2{
 }
 
 @media screen and (max-width: 768px) {
+  .section-1{
+    height: inherit!important;
+  }
   .section-1 h1 {
+   
     padding:50% 0!important;
 }
 }
