--- a/css/portions/sections/section-1.scss
+++ b/css/portions/sections/section-1.scss
@@ -12,3 +12,12 @@
    
  
 }
+@media screen and (min-width: 768px) {
+  .section-1{
+    height: inherit!important;
+    h1{
+      height: inherit!important;
+    }
+  }
+ 
+}
